# fastapi-test

./: docker-compose.yml  pyproject.toml  run.py
app/: main.py
app/db/: database.py
app/models/: users.py
app/models_db/: user.py
app/routers/: auth.py  items.py  users.py
app/services/: auth_service.py  users_service.py
app/utils/: config.py  security.py
